--- a/app/less/hero.less
+++ b/app/less/hero.less
@@ -1,11 +1,13 @@
 @import 'style.less';
 
 .hero {
-  height: 66%;
-  width: @wrapper-width-mobile;
+  height: 73vh;
+  //width: @wrapper-width-mobile;
+  display: flex;
+  align-items: center;
 
   .hero-text {
-    width: @wrapper-width-tablet;
+    //width: @wrapper-width-tablet;
 
     p {
       //font-size: 1.23em;
