--- a/app/less/style.less
+++ b/app/less/style.less
@@ -2,18 +2,19 @@
 @wrapper-width-tablet: 655px;
 @wrapper-width-desktop: 860px;
 
-html, body {
+body {
   font-family: 'Noto Sans', sans-serif;
   font-size: 16px;
-  height: 100%;
-  margin: 0px 8px;
-}
+  margin: 0px 18px;
 
-body {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
+  //justify-content: center;
+  //align-items: flex-start;
+}
+
+p {
+  line-height: 1.45em;
 }
 
 h1, h2, h3 {
